# prompt-shield

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
prompt_shield/: __init__.py
prompt_shield/core/: __init__.py  exceptions.py  patterns.py  scanner.py
prompt_shield/tools/: cli.py
tests/: test_patterns.py  test_scanner.py
